# agrorob-corn-detection

./: CMakeLists.txt  Dockerfile  README.md  package.xml
config/: config.yaml  config_vis.yaml
launch/: launch_detection.py  launch_detection_vis.py
scripts/: detection.py  detection_vis.py
